=== 4.0

* Breaking changes
  * The default output encoding for RDoc is now UTF-8.  Previously RDoc used
    the default external encoding which was determined from your locale.
    Issue #106 by Justin Baker.

* Minor enhancements
  * Added Markdown as a supported format.  The markdown format can be set on a
    per-file or per-comment basis with the +:markdown:+ directive like the rd
    and tomdoc formats and on a per-project basis with
    <tt>rdoc --markup markdown --write-options</tt>
  * Added a table of contents to the sidebar.
  * RDoc markup format merges adjacent labels in a label or note list into a
    single definition list item for output.
  * RDoc now tracks use of extend.  Pull request #118 by Michael Granger.
  * RDoc now tracks methods that use super.  Pull request #116 by Erik
    Hollensbe.

* Bug fixes
  * A word that is directly followed by a multi-word tidy link label no longer
    disappears.  (Like <code>text{link}[http://example]</code>)
  * Fixed legacy template support.  Pull Request #107 by Justin Baker.
  * An HTML class in a verbatim section no longer triggers ruby parsing.
    Issue #92 by Vijay Dev
  * Improved documentation for setting the default documentation format for
    your ruby project.  Issue #94 by Henrik Hodne
  * Fixed handling of LANG in the RDoc::Options tests.  Issue #99 by Vít
    Ondruch
  * RDoc no longer quits when given an entry that is not a file or directory.
    Issue #101 by Charles Nutter
  * Fixed bug in syntax-highlighting that would corrupt regular expressions.
    Ruby Bug #6488 by Benny Lyne Amorsen.
  * "class Object" no longer appears in the coverage report if all its methods
    are documented.  This suppresses a false positive for libraries that add
    toplevel methods.  Pull Request #128 by Zachary Scott.
  * Fixed test_gen_url test name in TestRDocMarkupToHtml.  Pull Request #130
    by Zachary Scott.
  * Comment-defined methods ahead of define_method are now discovered.  Issue