@@ -1,7 +1,8 @@
 require 'rdoc/ri'
 
 ##
-# The directories where ri data lives.
+# The directories where ri data lives.  Paths can be enumerated via ::each, or
+# queried individually via ::system_dir, ::site_dir, ::home_dir and ::gem_dir.
 
 module RDoc::RI::Paths
 
@@ -10,14 +11,11 @@ module RDoc::RI::Paths
 
   version = RbConfig::CONFIG['ruby_version']
 
-  base    = if RbConfig::CONFIG.key? 'ridir' then
+  BASE    = if RbConfig::CONFIG.key? 'ridir' then
               File.join RbConfig::CONFIG['ridir'], version
             else
               File.join RbConfig::CONFIG['datadir'], 'ri', version
             end
-
-  SYSDIR  = File.join base, "system"
-  SITEDIR = File.join base, "site"
 
   homedir = begin
               File.expand_path('~')
@@ -47,20 +45,33 @@ module RDoc::RI::Paths
   # :extra:: ri data directory from the command line.  Yielded for each
   #          entry in +extra_dirs+
 
-  def self.each system, site, home, gems, *extra_dirs # :yields: directory, type
+  def self.each system = true, site = true, home = true, gems = true, *extra_dirs # :yields: directory, type
+    return enum_for __method__ unless block_given?
+
     extra_dirs.each do |dir|
       yield dir, :extra
     end
 
-    yield SYSDIR,  :system if system
-    yield SITEDIR, :site   if site
-    yield HOMEDIR, :home   if home and HOMEDIR
+    yield system_dir,  :system if system
+    yield site_dir,    :site   if site
+    yield home_dir,    :home   if home and HOMEDIR
 
     gemdirs.each do |dir|
       yield dir, :gem
     end if gems
 
     nil
+  end
+
+  ##
+  # The ri directory for the gem with +gem_name+.
+
+  def self.gem_dir name, version
+    req = Gem::Requirement.new "= #{version}"
+
+    spec = Gem::Specification.find_by_name name, req
+
+    File.join spec.doc_dir, 'ri'
   end
 
   ##
@@ -97,12 +108,23 @@ module RDoc::RI::Paths
   end
 
   ##
+  # The location of the rdoc data in the user's home directory.
+  #
+  # Like ::system, ri data in the user's home directory is rare and predates
+  # libraries distributed via RubyGems.  ri data is rarely generated into this
+  # directory.
+
+  def self.home_dir
+    HOMEDIR
+  end
+
+  ##
   # Returns existing directories from the selected documentation directories
   # as an Array.
   #
   # See also ::each
 
-  def self.path(system, site, home, gems, *extra_dirs)
+  def self.path(system = true, site = true, home = true, gems = true, *extra_dirs)
     path = raw_path system, site, home, gems, *extra_dirs
 
     path.select { |directory| File.directory? directory }
@@ -122,6 +144,30 @@ module RDoc::RI::Paths
     end
 
     path.compact
+  end
+
+  ##
+  # The location of ri data installed into the site dir.
+  #
+  # Historically this was available for documentation installed by ruby
+  # libraries predating RubyGems.  It is unlikely to contain any content for
+  # modern ruby installations.
+
+  def self.site_dir
+    File.join BASE, 'site'
+  end
+
+  ##
+  # The location of the built-in ri data.
+  #
+  # This data is built automatically when `make` is run when ruby is
+  # installed.  If you did not install ruby by hand you may need to install
+  # the documentation yourself.  Please consult the documentation for your
+  # package manager or ruby installer for details.  You can also use the
+  # rdoc-data gem to install system ri data for common versions of ruby.
+
+  def self.system_dir
+    File.join BASE, 'system'
   end
 
 end
